--- a/Scrim-s01ua6i/index.html
+++ b/Scrim-s01ua6i/index.html
@@ -6,7 +6,7 @@
         <span id="num1-el"></span>
         <span id="num2-el"></span>
         <br>
-        <button>Add</button>
+        <button>add things</button>
         <button>Subtract</button>
         <button>Divide</button>
         <button>Multiply</button>
